--- a/style.css
+++ b/style.css
@@ -49,6 +49,12 @@ header ul li a{
     margin-left: 40px;
     font-weight: 400;
     text-decoration: none;
+    transition: 0.5s;
+}
+
+header ul li a:hover{
+    background:rgb(255, 139, 187);
+    transform: translateX(-15%)
 }
 
 .content{
@@ -77,6 +83,10 @@ header ul li a{
 
 }
 
+.content .textBox p{
+    max-width: 520px;
+}
+
 .content .textBox a{
     display: inline-block;
     margin-top: 20px;
@@ -85,6 +95,12 @@ header ul li a{
     background: rgb(243, 44, 127);
     color: white;
     border-radius: 40px;
+    transition: 0.8s;
+}
+
+.content .textBox a:hover{
+    transform: translateY(15%);
+    background:rgb(255, 139, 187);
 }
 
 .content .img-box{
@@ -98,4 +114,40 @@ header ul li a{
 .content .img-box img{
     max-width: 340px;
     
+}
+
+.thumb{
+    position: absolute;
+    left: 50%;
+    bottom: 20px;
+    transform: translateX(-50%);
+    display: flex;
+}
+
+.thumb li{
+    list-style: none;
+    display: inline-block;
+    margin: 0 20px;
+    cursor: pointer;
+    transition: 0.5s;
+
+}
+
+.thumb li:hover{
+    transform: translateY(-20%);
+}
+
+.thumb li img{
+    max-width: 80px;
+}
+
+
+.circle{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgb(150, 2, 64);
+    clip-path: circle(700px at right );
 }
