--- a/style.css
+++ b/style.css
@@ -113,6 +113,7 @@ header ul li a:hover{
 
 .content .img-box img{
     max-width: 340px;
+    max-height: 200px;
     
 }
 
@@ -150,4 +151,55 @@ header ul li a:hover{
     height: 100%;
     background: rgb(150, 2, 64);
     clip-path: circle(700px at right );
+}
+
+@media screen and (max-width: 991px){
+    header{
+        padding: 20px;
+    }
+
+    header .logo{
+        max-width: 60px;
+    }
+
+    header ul{
+        display: none;
+    }
+
+    section{
+        padding: 20px 20px 120px;
+    }
+
+    .content{
+        flex-direction: column;
+        margin-top: 120px;
+    }
+
+
+    .content .img-box{
+        max-width: 100%;
+    }
+
+    .content .img-box img{
+        max-width:250px;
+    }
+
+    .content .textBox{
+        max-width: 100%;
+        margin-bottom: 12%;
+        justify-content: center;
+    }
+
+    .content .textBox h2{
+        font-size:2.5em;
+        margin-bottom: 15px;
+    }
+
+    .thumb li img{
+        max-width: 40px;
+    }
+    
+    .circle{
+        clip-path: circle(400px at bottom );
+    }
 }
