--- a/style.css
+++ b/style.css
@@ -153,10 +153,48 @@ header ul li a:hover{
     clip-path: circle(700px at right );
 }
 
+
+
+
+/* RESPONSIVO */
+
+
 @media screen and (max-width: 991px){
     header{
         padding: 20px;
     }
+
+    .toggle{
+        position: relative;
+        width: 30px;
+        height: 30px;
+        background: url(../imagens/menu.png);
+        background-size: 30px;
+        background-repeat: no-repeat;
+        background-position: center;
+        z-index: 11;
+    }
+
+    .toggle:hover{
+        cursor: pointer;
+    }
+
+
+    header ul.navigation.active{
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        background: #fff;
+        z-index: 10;
+    }
+
+
 
     header .logo{
         max-width: 60px;
@@ -181,7 +219,7 @@ header ul li a:hover{
     }
 
     .content .img-box img{
-        max-width:250px;
+        max-width:320px;
     }
 
     .content .textBox{
@@ -202,4 +240,7 @@ header ul li a:hover{
     .circle{
         clip-path: circle(400px at bottom );
     }
+
+
+
 }
