--- a/style.css
+++ b/style.css
@@ -204,6 +204,11 @@ header ul li a:hover{
         display: none;
     }
 
+    header ul li a{
+        font-size:1.5em;
+        margin: 5px 0;
+    };
+
     section{
         padding: 20px 20px 120px;
     }
